working on banner

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,3 +12,8 @@
 @import 'default/animations';
 @import 'default/shortcode';
 @import 'default/spacing';
+
+/**************************************
+    Inner Styles
+***************************************/
+@import 'common/slider'
